		- added periodic drive caller
		- added node/element private data funcs to model namespace
		- added "current" func to model namespace
		- added partial driven element support to inverse dynamics
		- added support for Mat3x3 & Mat6x6 template drive callers
		- added variable properties body
		- allow Euler angles input in degrees
		- refactor NetCDF support
	Backward compatibility issues:
		- the (undocumented) output of the total (pin) joint changed
		- the induced velocity element internal API changed
	Known issues:
		- Schur solver is broken
		- TotalPinJoint inverse dynamics support is broken
	Bug fixes:
		- fix node label in external structural force output
		- fix typo in eigenanalysis documentation (Patrick Rix)
		- fix working directory setting
		- fix input/output file name inconsistencies
		- fix crash in eigenvectors output (noted by Reinhard Resch)
		- fix build with Intel's icpc
		- fix parameter node use in elems (noted by Reinhard Resch)
		- fix arpack counter for non terminal (Reinhard Resch)
		- fix label alignment in strext (noted by Mirco Valentini)
		- fix index in full submatrix add to full matrix (unused)
		- fix rigid-body inertia of modal joint (record 12)
		  when modal node is not in CM (noted by Paolo Zaltron)
		- fix gravity in inverse dynamics (noted by Andrea Zanoni)
		- fix SIGSEGV when binding to loadable elem (Reinhard Resch)
		- fix near-zero velocity in asynch. motor (Reinhard Resch)
		- fix missing <errno.h> in Simulink interface
		  (noted by Francesco Castellini)
		- fix (and document) total internal force
		- fix namespace clashes when building with mingw
		- fix naive pivot error message (noted by Tommaso Solcia)
		- fix viscous constitutive laws input

MBDyn 1.4.0
	Enhancements:
		- added shell element (Marco Morandini, Riccardo Vescovini)
		- added more verbose info to mapping file generated by
		  create_mls_interface
		- added multiple flavors of Glauert inflow
		- added output flag to .out file